// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should accept onChange function 1`] = `
.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  display: inline-block;
  width: 1em;
  height: 1em;
  border: 1px solid #999;
  background: transparent;
  text-align: center;
  border-radius: 4px;
  line-height: 1em;
}

.c5 {
  color: #999;
  margin-left: 1.5em;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  margin: 0.25em 0;
}

.c0:hover .c2 {
  border-color: #333;
}

.c0:hover .c4 {
  color: #666;
}

<label
  className="c0"
>
  <input
    checked={false}
    className="c1"
    onChange={[Function]}
    type="checkbox"
    value={1}
  />
  <div
    checked={false}
    className="c2 c3"
  />
  <span
    className="c4 c5"
  >
    Test
  </span>
</label>
`;

exports[`Checkbox should call default props onChange function when no onChange property is passed 1`] = `
.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  display: inline-block;
  width: 1em;
  height: 1em;
  border: 1px solid #999;
  background: transparent;
  text-align: center;
  border-radius: 4px;
  line-height: 1em;
}

.c5 {
  color: #999;
  margin-left: 1.5em;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  margin: 0.25em 0;
}

.c0:hover .c2 {
  border-color: #333;
}

.c0:hover .c4 {
  color: #666;
}

<label
  className="c0"
>
  <input
    checked={false}
    className="c1"
    onChange={[Function]}
    type="checkbox"
    value={1}
  />
  <div
    checked={false}
    className="c2 c3"
  />
  <span
    className="c4 c5"
  >
    Test
  </span>
</label>
`;

exports[`Checkbox should render Checkbox 1`] = `
.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  display: inline-block;
  width: 1em;
  height: 1em;
  border: 1px solid #999;
  background: transparent;
  text-align: center;
  border-radius: 4px;
  line-height: 1em;
}

.c5 {
  color: #999;
  margin-left: 1.5em;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  margin: 0.25em 0;
}

.c0:hover .c2 {
  border-color: #333;
}

.c0:hover .c4 {
  color: #666;
}

<label
  className="c0"
>
  <input
    checked={false}
    className="c1"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    checked={false}
    className="c2 c3"
  />
  <span
    className="c4 c5"
  >
    
  </span>
</label>
`;

exports[`Checkbox should render Checkbox with checked prop 1`] = `
.c5 {
  font-size: 4rem;
  text-align: center;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  display: inline-block;
  width: 1em;
  height: 1em;
  border: 1px solid #90ee7e;
  background: #90ee7e;
  text-align: center;
  border-radius: 4px;
  line-height: 1em;
}

.c4 {
  color: black;
  font-size: 0.75em;
  font-weight: bold;
}

.c7 {
  color: #999;
  margin-left: 1.5em;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  margin: 0.25em 0;
}

.c0:hover .c2 {
  border-color: #333;
}

.c0:hover .c6 {
  color: #666;
}

<label
  className="c0"
>
  <input
    checked={true}
    className="c1"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    checked={true}
    className="c2 c3"
  >
    <span
      className="c4 c5 lni lni-checkmark"
    />
  </div>
  <span
    className="c6 c7"
  >
    
  </span>
</label>
`;

exports[`Checkbox should render Checkbox with value and label 1`] = `
.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  display: inline-block;
  width: 1em;
  height: 1em;
  border: 1px solid #999;
  background: transparent;
  text-align: center;
  border-radius: 4px;
  line-height: 1em;
}

.c5 {
  color: #999;
  margin-left: 1.5em;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  margin: 0.25em 0;
}

.c0:hover .c2 {
  border-color: #333;
}

.c0:hover .c4 {
  color: #666;
}

<label
  className="c0"
>
  <input
    checked={false}
    className="c1"
    onChange={[Function]}
    type="checkbox"
    value={1}
  />
  <div
    checked={false}
    className="c2 c3"
  />
  <span
    className="c4 c5"
  >
    Test
  </span>
</label>
`;

exports[`Checkbox should render Checkbox with value and label, and be checked 1`] = `
.c5 {
  font-size: 4rem;
  text-align: center;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  display: inline-block;
  width: 1em;
  height: 1em;
  border: 1px solid #90ee7e;
  background: #90ee7e;
  text-align: center;
  border-radius: 4px;
  line-height: 1em;
}

.c4 {
  color: black;
  font-size: 0.75em;
  font-weight: bold;
}

.c7 {
  color: #999;
  margin-left: 1.5em;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  margin: 0.25em 0;
}

.c0:hover .c2 {
  border-color: #333;
}

.c0:hover .c6 {
  color: #666;
}

<label
  className="c0"
>
  <input
    checked={true}
    className="c1"
    onChange={[Function]}
    type="checkbox"
    value={1}
  />
  <div
    checked={true}
    className="c2 c3"
  >
    <span
      className="c4 c5 lni lni-checkmark"
    />
  </div>
  <span
    className="c6 c7"
  >
    Test
  </span>
</label>
`;
